# miden-client

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  diesel.toml  sea-orm.md
crates/rust-client/: Cargo.toml
crates/rust-client/src/: builder.rs  errors.rs  lib.rs  mock.rs  tests.rs
crates/rust-client/src/account/: mod.rs
crates/rust-client/src/keystore/: fs_keystore.rs  web_keystore.rs
crates/rust-client/src/note/: import.rs  note_screener.rs  note_update_tracker.rs
crates/rust-client/src/notes/: import.rs
crates/rust-client/src/rpc/: errors.rs
crates/rust-client/src/rpc/domain/: account.rs  digest.rs  merkle.rs  note.rs  nullifier.rs  smt.rs  sync.rs  transaction.rs  word.rs
crates/rust-client/src/rpc/tonic_client/: mod.rs
crates/rust-client/src/store/: account.rs  data_store.rs  errors.rs  mod.rs
crates/rust-client/src/store/note_record/: input_note_record.rs  output_note_record.rs
crates/rust-client/src/store/sqlite_store/: account.rs  chain_data.rs  mod.rs  note.rs  notes.rs  (+3 more)
crates/rust-client/src/sync/: block_header.rs  mod.rs  state_sync.rs  state_sync_update.rs
crates/rust-client/src/test_utils/: common.rs  mock.rs
crates/rust-client/src/transaction/: mod.rs
crates/rust-client/src/transactions/: mod.rs
crates/testing/node-builder/: Cargo.toml
crates/testing/node-builder/src/: lib.rs
crates/web-client/: Cargo.toml  package-lock.json  package.json
crates/web-client/js/: index.js
crates/web-client/js/types/: index.d.ts
crates/web-client/src/: export.rs  helpers.rs  lib.rs  new_account.rs  notes.rs
crates/web-client/src/models/: account.rs  account_code.rs  account_header.rs  account_id.rs  account_storage.rs  account_storage_requirements.rs  advice_inputs.rs  advice_map.rs  assembler.rs  asset_vault.rs  block_header.rs  input_notes.rs  merkle_path.rs  mod.rs  note_header.rs  note_id.rs  note_inclusion_proof.rs  note_recipient.rs  output_note.rs  output_notes.rs  partial_note.rs  rpo256.rs  storage_map.rs  transaction_id.rs  transaction_record.rs  transaction_script.rs  word.rs
crates/web-client/test/: fpi.test.ts  global.test.d.ts  mocha.global.setup.mjs  new_transactions.test.ts
docs/src/web-client/api/: README.md
docs/src/web-client/examples/: transactions.md
entity/: Cargo.toml
entity/src/: account_code.rs  account_keys.rs  account_storage.rs  account_vaults.rs  accounts.rs  lib.rs  prelude.rs
migration/src/: m20220101_000001_create_table.rs
scripts/: publish-crates.sh
src/: errors.rs  lib.rs  mock.rs  tests.rs
src/cli/: account.rs  input_notes.rs  mod.rs
src/client/: accounts.rs  chain_data.rs  notes.rs  sync_state.rs  transactions.rs
src/store/: chain_data.rs  data_store.rs  diesel_guide.md  mock_executor_data_store.rs  mod.rs  models.rs  notes.rs  schema.rs  state_sync.rs  store.sql
src/store/note_record/: input_note_record.rs
src/store/sqlite_store/: notes.rs
tests/: Cargo.toml  cli.rs
tests/files/: failure.masm
tests/integration/: common.rs  main.rs
tests/src/: custom_transactions_tests.rs  fpi_tests.rs  main_tests.rs  network_transaction_tests.rs
(+26 files in other folders)
